# apps/api/internal/config/database.go
@@ -1,38 +1,0 @@
-package config
-
-import (
-	"fmt"
-	"os"
-)
-
-type DatabaseConfig struct {
-	Host     string
-	Port     string
-	User     string
-	Password string
-	DBName   string
-	SSLMode  string
-}
-
-func NewDatabaseConfig() *DatabaseConfig {
-	return &DatabaseConfig{
-		Host:     getEnvOrDefault("DB_HOST", "localhost"),
-		Port:     getEnvOrDefault("DB_PORT", "5433"),
-		User:     getEnvOrDefault("DB_USER", "talkify_user"),
-		Password: getEnvOrDefault("DB_PASSWORD", "talkify_password"),
-		DBName:   getEnvOrDefault("DB_NAME", "talkify_db"),
-		SSLMode:  getEnvOrDefault("DB_SSLMODE", "disable"),
-	}
-}
-
-func (c *DatabaseConfig) DSN() string {
-	return fmt.Sprintf("host=%s port=%s user=%s password=%s dbname=%s sslmode=%s",
-		c.Host, c.Port, c.User, c.Password, c.DBName, c.SSLMode)
-}
-
-func getEnvOrDefault(key, defaultValue string) string {
-	if value := os.Getenv(key); value != "" {
-		return value
-	}
-	return defaultValue
-}
